1999-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/pinv.cc (Fpinv): Texinfoize doc string.

	* defun-int.h (DEFUN_DLD_INTERNAL): New macro.
	* defun-dld.h [MAKE_BUILTINS] (DEFUN_DLD): Simply expand to
	DEFUN_DLD_INTERNAL.
	* mkbuiltins: Generate code to define DEFUN_DLD_INTERNAL.
	* mkgendoc: Likewise.

	* Makefile.in (gendoc.o): Don't optimize when creating gendoc.
	(%.dc : %.cc): Delete rule.

	* pt-decl.cc (Vdefault_global_variable_value): Texinofize doc string.
	* variables.cc (Fclear, Fdocument, Fexist, Fis_global, Fwho): Ditto.
	* help.cc (Ftype, Fwhich): Ditto.
	* ov.cc (Vstruct_levels_to_print, Vimplicit_str_to_num_ok): Ditto.
	* data.cc (Fis_struct, Fstruct_elements, Fstruct_constains): Ditto.
	* strfns.cc (Fisstr, Fsetstr): Ditto.
	* pt-mat.cc: (Fimplicit_num_to_str_ok, Fstring_fill_char): Ditto.
	* utils.cc (Fundo_string_escapes): Ditto.
	* mappers.cc: (Fisalnum, Fisalpha, Fisascii, Fiscntrl, Fisdigit,
	Fisgraph, Fislower, Fisprint, Fispunct, Fisspace, Fisupper,
	Fisxdigit, Ftoascii, Ftolower, Ftoupper): Ditto.

1999-11-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* syscalls.cc (symbols_of_syscalls): Use DEFCONSTX to define
	Octave constants for C macros like O_WRONLY.

	* oct-lvalue.cc (octave_lvalue::set_index): Disallow expressions
	like x(i)(j) = rhs.

1999-11-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* symtab.cc (symbol_record::type_as_string): New function.

	* symtab.cc (symbol_record::which): New functions.
	* help.cc (do_which): New functions.
	(Fwhich): Use them.

	* help.cc (help_from_symbol_table, help_from_file): New functions.
	(builtin_help): Use them.

	* help.cc (do_type): New function.
	(symbol_record::type): New function.
	(Ftype): Use them.

	* help.cc (print_symbol_type): Delete.

	* symtab.cc (symbol_table::name_list): Delete count arg.
	(symbol_table::symbol_list): Likewise.
	(symbol_table::glob): Likewise.  Also return Array<symbol_record *>
	instead of symbol_record **.
	Change all callers.